WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167104
[QuickLook] QLPreviewConverter should be owned by its delegate
https://bugs.webkit.org/show_bug.cgi?id=167104
Summary
[QuickLook] QLPreviewConverter should be owned by its delegate
Andy Estes
Reported
2017-01-16 18:36:52 PST
[QuickLook] QLPreviewConverter should be owned by its delegate
Attachments
Patch
(12.09 KB, patch)
2017-01-16 18:46 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(12.07 KB, patch)
2017-01-16 19:17 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-01-16 18:46:23 PST
Created
attachment 299007
[details]
Patch
WebKit Commit Bot
Comment 2
2017-01-16 18:48:18 PST
Attachment 299007
[details]
did not pass style-queue: ERROR: Source/WebCore/loader/ios/QuickLook.mm:331: Code inside a namespace should not be indented. [whitespace/indent] [4] ERROR: Source/WebCore/loader/ios/QuickLook.mm:356: Extra space in capture list. [whitespace/brackets] [4] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andreas Kling
Comment 3
2017-01-16 18:59:25 PST
Comment on
attachment 299007
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299007&action=review
> Source/WebCore/loader/ios/QuickLook.mm:183 > + static auto& emptyClient = adoptRef(*new QuickLookHandleClient()).leakRef();
It would be nice to use NeverDestroyed here to avoid the permanent heap allocation.
Andy Estes
Comment 4
2017-01-16 19:17:13 PST
Created
attachment 299012
[details]
Patch
WebKit Commit Bot
Comment 5
2017-01-16 19:55:06 PST
Comment on
attachment 299012
[details]
Patch Clearing flags on attachment: 299012 Committed
r210796
: <
http://trac.webkit.org/changeset/210796
>
WebKit Commit Bot
Comment 6
2017-01-16 19:55:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug